kubernetes/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: flights-monitoring
  labels:
    name: flights-monitoring
