kubernetes/alert_system.yaml
apiVersion: v1
kind: Service
metadata:
  name: alert-system
  namespace: flights-monitoring
spec:
  ports:
    - name: metrics
      protocol: TCP
      port: 8001
      targetPort: 8001
  selector:
    app: alert-system
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert-system-deployment
  namespace: flights-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alert-system
  template:
    metadata:
      labels:
        app: alert-system
    spec:
      containers:
        - name: alert-system
          image: alert-system:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8001
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
