kubernetes/data_collector.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-collector-service
  namespace: flights-monitoring
spec:
  selector:
    app: data-collector
  ports:
    - name: api
      protocol: TCP
      port: 5000
      targetPort: 5000
    - name: metrics
      protocol: TCP
      port: 8000
      targetPort: 8000
    - name: grpc
      protocol: TCP
      port: 50051
      targetPort: 50051
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: data-collector
  namespace: flights-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-collector
  template:
    metadata:
      labels:
        app: data-collector
    spec:
      containers:
        - name: data-collector
          image: data-collector:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
            - containerPort: 8000
            - containerPort: 50051
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
