kubernetes/data_db.yaml
kind: Service
apiVersion: v1
metadata:
  name: data-db-service
  namespace: flights-monitoring
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: data-db
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: data-db
  namespace: flights-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-db
  template:
    metadata:
      labels:
        app: data-db
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: data-db-pvc
      resources:
        requests:
          memory: "256Mi"
          cpu: "250m"
        limits:
          memory: "512Mi"
          cpu: "500m"
