kubernetes/kafka.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kafka
  namespace: flights-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.4.0
          ports:
            - containerPort: 9092
            - containerPort: 29093
          volumeMounts:
            - name: kafka-data
              mountPath: /var/lib/kafka/data
      volumes:
        - name: kafka-data
          persistentVolumeClaim:
            claimName: kafka-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: kafka-service
  namespace: flights-monitoring
spec:
  ports:
    - port: 9092
      targetPort: 9092
  selector:
    app: kafka
