kubernetes/notifier_system.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifier-system
  namespace: flights-monitoring
spec:
  ports:
    - name: metrics
      protocol: TCP
      port: 8002
      targetPort: 8002
  selector:
    app: notifier-system
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifier-system-deployment
  namespace: flights-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifier-system
  template:
    metadata:
      labels:
        app: notifier-system
    spec:
      containers:
        - name: notifier-system
          image: notifier-system:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8002
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
