kubernetes/user_db.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-db-service
  namespace: flights-monitoring
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: user-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-db
  namespace: flights-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-db
  template:
    metadata:
      labels:
        app: user-db
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: user-db-pvc
      resources:
        requests:
          memory: "256Mi"
          cpu: "250m"
        limits:
          memory: "512Mi"
          cpu: "500m"
