kubernetes/user_manager.yaml
kind: Service
apiVersion: v1
metadata:
  name: user-manager-service
  namespace: flights-monitoring
spec:
  selector:
    app: user-manager
  ports:
    - name: api
      protocol: TCP
      port: 5000
      targetPort: 5000
    - name: grpc
      protocol: TCP
      port: 50051
      targetPort: 50051
    - name: metrics
      protocol: TCP
      port: 9102
      targetPort: 9102
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: user-manager
  namespace: flights-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-manager
  template:
    metadata:
      labels:
        app: user-manager
    spec:
      containers:
        - name: user-manager
          image: user-manager:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
            - containerPort: 50051
            - containerPort: 9102
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
