kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: flights-monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  tls:
    - hosts:
        - localhost
      secretName: self-signed-tls

  rules:
    - host: localhost
      http:
        paths:
          - path: /user_manager(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-manager-service
                port:
                  number: 5000
          - path: /data_collector(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: data-collector-service
                port:
                  number: 5000
